Fixing background image

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 /* HTML Selectors */
 .bg {
-    background-image: url("images/bulbasaur.jpg");
+    background-image: url("../images/bulbasaur.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     height: 96vh;
